[gd_scene load_steps=2 format=3 uid="uid://blxx03kpajn83"]

[ext_resource type="Script" path="res://Scripts/game_over_screen.gd" id="1_mml0b"]

[node name="Pause Menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_mml0b")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Logo" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 293.0
offset_top = 63.0
offset_right = 819.0
offset_bottom = 258.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 194
text = "Pause"
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_left = 461.0
offset_top = 297.0
offset_right = 691.0
offset_bottom = 519.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Resume" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Restart" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Quit" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "QUIT"

[connection signal="button_down" from="Control/MarginContainer/VBoxContainer/Resume" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="Control/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="Control/MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_button_down"]
[connection signal="button_down" from="Control/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_button_button_down"]
[connection signal="button_down" from="Control/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_button_down"]
